feat: 添加通用的pageWrap组件

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h5-webview",
-  "version": "0.0.7",
+  "version": "2.0.7",
   "description": "h5版，仿原生view管理器",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -8,11 +8,14 @@
     "name": "xujunjie",
     "email": "yinhunfeixue@163.com"
   },
-  "repository": "/webview",
+  "repository": "https://github.com/yinhunfeixue/h5-webview",
   "scripts": {
     "dev": "father doc dev",
     "build": "father build",
-    "p": "yarn umi-lib build --cjs && npm version patch"
+    "p": "yarn umi-lib build --cjs && npm version patch",
+    "publicGitHub": "father doc build && father doc deploy",
+    "publicNpm": "npm run build && npm login && npm version patch && cp package.json ./dist/package.json && cp README.md ./dist/README.md && cd dist && npm publish",
+    "public": "npm run publicGitHub && npm run publicNpm"
   },
   "peerDependencies": {
     "react": "16.x"
