--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,26 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "declaration": true,
     "strict": true,
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": [
+    "src",
+    ".umirc.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "lib",
+    "es",
+    "dist",
+    "typings",
+    "**/__test__",
+    "test"
+  ]
 }
