--- a/v3/tsconfig.json
+++ b/v3/tsconfig.json
@@ -9,9 +9,14 @@
     "sourceMap": true,
     "baseUrl": "./",
     "strict": true,
+    "declaration": true,
     "paths": {
-      "@/*": ["src/*"],
-      "@@/*": ["src/.umi/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "@@/*": [
+        "src/.umi/*"
+      ]
     },
     "allowSyntheticDefaultImports": true
   },
