--- a/v3/package.json
+++ b/v3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h5-webview",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "h5版，仿原生view管理器",
   "scripts": {
     "start": "dumi dev",
@@ -42,6 +42,7 @@
     "core-js": "^3.8.1",
     "react": "^16.12.0"
   },
+  "sideEffects":true,
   "resolutions": {
     "@types/react": "^16.14.2"
   },
