--- a/v3/package.json
+++ b/v3/package.json
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
-    "@types/react": "16.14.2",
+    "@types/react": "^16.14.2",
     "@types/vfile-message": "^2.0.0",
     "@umijs/test": "^3.0.5",
     "dumi": "^1.1.0-rc.7",
