vscode 配置自动更新

--- a/v3/.vscode/settings.json
+++ b/v3/.vscode/settings.json
@@ -27,6 +27,6 @@
   "prettier.proseWrap": "always",
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit"
   }
 }
